welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: reassignment to val
  while(!estSurBiscuit){  if(estFaceMur=true)
                                       ^SlugTracking:7: error: value update is not a member of java.awt.Color
   if(getCouleurSol()=Color.green)
      ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while(!estSurBiscuit){  if(estFaceMur=true)
  ^